2005-11-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): add
	rhythmic-grob-interface to TabNoteHead.

	* scm/layout-beam.scm (check-quant-callbacks): remove
	set_stem_lengths()

2005-11-08  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly (divisiones): Maintenance bugfix: vertical
	alignment of centered divisiones.

	* scm/scripts.scm (articulations): Maintenance bugfix:
	follow-into-staff -> quantize-position.

	* lily/vaticana-ligature-engraver.cc (transform_heads): Bugfix:
	plica head in porrectus deminutus.

2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Group): add %clean section.

	* lily/tuplet-bracket.cc (print): change check: remove bracket if
	less then 1/5th of total length.  
	(print): use gap too.  Fixes tupletUp-single-bracket.ly

	* scm/music-functions.scm (glue-mm-rest-texts): also put other
	events into EventChord. This fixes textspanners on mm rests. Fixes
	spanner-rest.ly

	* lily/side-position-interface.cc (get_axis): read side-axis
	(set_axis): set side-axis.

	* scm/define-grobs.scm (all-grob-descriptions): add side-axis
	properties everywhere.

	* lily/spacing-spanner.cc (breakable_column_spacing): add
	average-spacing-wishes. Take maximum if not set.
	(musical_column_spacing): idem. Fixes: spacing-keysig-note.ly

	* scm/define-grobs.scm (all-grob-descriptions): add
	average-spacing-wishes.

	* lily/grob-closure.cc (add_offset_callback): bugfix: properly add
	offset callbacks. This fixes alignment for Fingering objects.

	* scm/define-grobs.scm (all-grob-descriptions): tiny bit less
	space for key - timesig combination. 

	* input/regression/script-stem-tremolo.ly (Module): new file.

	* scm/define-grobs.scm (all-grob-descriptions): decrease distance
	to key sig.

	* lily/dynamic-engraver.cc (acknowledge_stem_tremolo): new function.
	Fixes: c-tremolo-script.ly.
	
	* lily/text-engraver.cc (acknowledge_stem_tremolo): new function.
