@@ -1,3 +1,9 @@
+2005-11-10  Jürgen Reuter  <reuter@ipd.uka.de>
+
+	* lily/vaticana-ligature.cc, lily/vaticana-ligature-engraver.cc:
+	Maintenance bugfix: reduce number of font related warnings by
+	updating naming conventions for glyph-name.
+
 2005-11-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/define-grobs.scm (all-grob-descriptions): add
